src/src/Yal.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Yal.java */
import java.io.*;
import java.util.Scanner;

public class Yal/*@bgen(jjtree)*/implements YalTreeConstants, YalConstants {/*@bgen(jjtree)*/
  protected static JJTYalState jjtree = new JJTYalState();
  /**
  * Main compiler runner
  */
  public static void main(String args []) throws ParseException, FileNotFoundException, Exception
  {
    Yal parser;
    String ficheiro=null;
        String folder ="Yal/";

        //testar se tem argumentos
        if (args.length>0)
        {
                if (args.length==1)
                {
                        File fx = new File(args[0]);
                        FileInputStream fis = new FileInputStream(fx);
                    BufferedInputStream bis = new BufferedInputStream(fis);
                    DataInputStream dis = new DataInputStream(bis);
                    parser=new Yal(dis);
                    ficheiro=args[0];
                } else
                {
                        System.out.println("Numero de argumentos errado");
                        return;
                }

        } else {
                //Listar directorio e ficheiros
            File dir = new File(folder);
            String[] child = dir.list();

            if (child == null) {
                        System.out.println("Pasta Yal vazia");
                        System.out.println("Colar Exemplo e Clicar Enter");
                        parser=new Yal(System.in);
                } else {
                    System.out.println("Ficheiros:");
                    for (int i=0; i<child.length; i++) {
                        System.out.println(i + "-" + child[i]);
                    }
                    System.out.println("Escolha o numero do ficheiro:");
                    Scanner scan = new Scanner(System.in);
                        int op=scan.nextInt();
                        if ( (op < 0) || (op >= child.length) ) return;

                        File fx = new File(folder + child[op]);
                    FileInputStream fis = new FileInputStream(fx);
                BufferedInputStream bis = new BufferedInputStream(fis);
                DataInputStream dis = new DataInputStream(bis);
                parser=new Yal(dis);
                ficheiro=child[op];
                }
        }

        SimpleNode n = parser.Root();
    try
    {
        System.out.println("\u005cnAST:");
        n.dump("");

        System.out.println("\u005cnANALISES LEXICAL E SINTACTICA CORRECTAS");
    }
    catch (Exception e)
    {
        System.out.println("ANALISES LEXICAL E SINTACTICA ERRADAS");
        System.out.println(e.getMessage());
    }

    SymbolTable sy = new SymbolTable();
    try
    {

                sy.createSymbolTable(n);

                System.out.println("\u005cnFEITO");
    } catch (Exception e)
    {
        System.out.println("\u005cnERRO");
    }

        if (!sy.Erro)
        {
                try
            {
                CodeGeneration codeGen = new CodeGeneration(ficheiro.substring(0,ficheiro.length()-4),n,sy);
                codeGen.initCodeGeneration();
            } catch (Exception e)
            {
                System.out.println("\u005cnERRO NA GERACAO DE CODIGO");
            }
        }
        else
        {
                System.out.println("NAO FOI POSSIVEL PROCEDER A GERACAO DE CODIGO");
        }
  }

/**
 * Root Node of the AST with Module, Declaration and Function Nodes
 */
  static final public SimpleNode Root() throws ParseException {
                   /*@bgen(jjtree) Root */
  SimpleNode jjtn000 = new SimpleNode(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MODULE);
      Module();
      jj_consume_token(LCHAVETA);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Declaration();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FUNCTION:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Function();
      }
      jj_consume_token(RCHAVETA);
                                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                                 jjtc000 = false;
                                                                                {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * Module Node of the AST with the module name
 */
  static final public void Module() throws ParseException {
               /*@bgen(jjtree) Module */
               SimpleNode jjtn000 = new SimpleNode(JJTMODULE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
               jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Declaration Node of the AST with the global declaration information 
 */
  static final public void Declaration() throws ParseException {
                    /*@bgen(jjtree) Declaration */
                    SimpleNode jjtn000 = new SimpleNode(JJTDECLARATION);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t;
    try {
      ASElement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        t = jj_consume_token(ASSIGN);
                     jjtn000.setVal(t.image);  jjtn000.setLine(t.beginLine);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 31:
          jj_consume_token(31);
          ArraySize();
          jj_consume_token(32);
          break;
        case ADDSUB_OP:
        case INTEGER:
          Integer();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(PVIRG);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Integer Node of the AST identifying an integer
 */
  static final public void Integer() throws ParseException {
                /*@bgen(jjtree) Integer */
                SimpleNode jjtn000 = new SimpleNode(JJTINTEGER);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token t1,t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDSUB_OP:
        t1 = jj_consume_token(ADDSUB_OP);
                        jjtn000.setVal(t1.image);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      t2 = jj_consume_token(INTEGER);
                                                                   jjtree.closeNodeScope(jjtn000, true);
                                                                   jjtc000 = false;
                                                                  jjtn000.addVal(t2.image); jjtn000.setLine(t2.beginLine);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Function Node of the AST with the function name, function return, parameter list and function body
 */
  static final public void Function() throws ParseException {
                 /*@bgen(jjtree) Function */
                 SimpleNode jjtn000 = new SimpleNode(JJTFUNCTION);
                 boolean jjtc000 = true;
                 jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(FUNCTION);
      if (jj_2_1(2)) {
        FunctionReturn();
      } else {
        ;
      }
      t = jj_consume_token(ID);
               jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        Varlist();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
      jj_consume_token(LCHAVETA);
      Body();
      jj_consume_token(RCHAVETA);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Function Return Node of the AST with return information
 */
  static final public void FunctionReturn() throws ParseException {
                       /*@bgen(jjtree) FunctionReturn */
                       SimpleNode jjtn000 = new SimpleNode(JJTFUNCTIONRETURN);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
               jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
        jj_consume_token(32);
                                                                                 jjtn000.addVal("[]");
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(ASSIGN);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Parameter List Node of a function of the AST
 */
  static final public void Varlist() throws ParseException {
                /*@bgen(jjtree) Varlist */
  SimpleNode jjtn000 = new SimpleNode(JJTVARLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ASElement();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRG:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        jj_consume_token(VIRG);
        ASElement();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Element Node of the AST being either scalar or access
 */
  static final public void ASElement() throws ParseException {
                           /*@bgen(jjtree) Element */
                           SimpleNode jjtn000 = new SimpleNode(JJTELEMENT);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
               jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
        jj_consume_token(32);
                                                                                 jjtn000.addVal("[]");
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Body Node of the AST with Statement Lists
 */
  static final public void Body() throws ParseException {
             /*@bgen(jjtree) Body */
  SimpleNode jjtn000 = new SimpleNode(JJTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDSUB_OP:
        case WHILE:
        case IF:
        case ID:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        Stmt();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Statement List Node of the AST with while, if, call and assign nodes
 */
  static final public void Stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
      While();
      break;
    case IF:
      If();
      break;
    case ADDSUB_OP:
    case ID:
      if (jj_2_2(3)) {
        Call();
        jj_consume_token(PVIRG);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDSUB_OP:
        case ID:
          Assign();
          jj_consume_token(PVIRG);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
 * Assign Node of the AST with left and right variables information
 */
  static final public void Assign() throws ParseException {
               /*@bgen(jjtree) Assign */
               SimpleNode jjtn000 = new SimpleNode(JJTASSIGN);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t;
    try {
      ASAccess();
      t = jj_consume_token(ASSIGN);
                               jjtn000.setVal("="); jjtn000.setLine(t.beginLine);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
        ArraySize();
        jj_consume_token(32);
        break;
      case ADDSUB_OP:
      case INTEGER:
      case ID:
        Operation();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Operation Node of the AST with arithmetic and bitwise operations between terms
 */
  static final public void Operation() throws ParseException {
                  /*@bgen(jjtree) Operation */
                  SimpleNode jjtn000 = new SimpleNode(JJTOPERATION);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token t;
    try {
      Term();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDSUB_OP:
        case ARITH_OP:
        case BITWISE_OP:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ARITH_OP:
          t = jj_consume_token(ARITH_OP);
                         jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
          break;
        case BITWISE_OP:
          t = jj_consume_token(BITWISE_OP);
                             jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
          break;
        case ADDSUB_OP:
          t = jj_consume_token(ADDSUB_OP);
                            jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        Term();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          if(jjtn000.val == null) {
                jjtn000.setVal("bypassnode");
                jjtn000.setBypass(true);
          }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * ArraySize Node of the AST with the value attributed to a size of an array
 */
  static final public void ArraySize() throws ParseException {
                  /*@bgen(jjtree) ArraySize */
                  SimpleNode jjtn000 = new SimpleNode(JJTARRAYSIZE);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token t1,t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        t1 = jj_consume_token(ID);
                  jjtn000.setVal(t1.image); jjtn000.setLine(t1.beginLine);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 33:
          jj_consume_token(33);
          t2 = jj_consume_token(SIZE);
                          jjtn000.addVal("." + t2.image);
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        break;
      case INTEGER:
        t1 = jj_consume_token(INTEGER);
                         jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
                        jjtn000.setVal(t1.image); jjtn000.setLine(t1.beginLine);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * Term Node of the AST witch can be an integer, function call or Access
 */
  static final public void Term() throws ParseException {
    if (jj_2_4(2)) {
      Integer();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDSUB_OP:
      case ID:
        if (jj_2_3(4)) {
          Call();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ADDSUB_OP:
          case ID:
            ASAccess();
            break;
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/**
 * Exprtest Node of the AST is the condition of the while and if nodes between two terms
 */
  static final public void Exprtest() throws ParseException {
                             /*@bgen(jjtree) Condition */
                             SimpleNode jjtn000 = new SimpleNode(JJTCONDITION);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(LPAR);
      Term();
      t = jj_consume_token(RELA_OP);
                                  jjtn000.setVal(t.image); jjtn000.setLine(t.beginLine);
      Term();
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * While Node of the AST with the expression and body nodes
 */
  static final public void While() throws ParseException {
              /*@bgen(jjtree) While */
              SimpleNode jjtn000 = new SimpleNode(JJTWHILE);
              boolean jjtc000 = true;
              jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(WHILE);
                  jjtn000.setLine(t.beginLine);
      Exprtest();
      jj_consume_token(LCHAVETA);
      Body();
      jj_consume_token(RCHAVETA);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * If Node of the AST with the expression and body nodes
 */
  static final public void If() throws ParseException {
           /*@bgen(jjtree) If */
           SimpleNode jjtn000 = new SimpleNode(JJTIF);
           boolean jjtc000 = true;
           jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IF);
               jjtn000.setLine(t.beginLine);
      Exprtest();
      jj_consume_token(LCHAVETA);
      Body();
      jj_consume_token(RCHAVETA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        jj_consume_token(LCHAVETA);
        Body();
        jj_consume_token(RCHAVETA);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
